--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+#h1-title {
+  font-family: 'Montserrat';
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 900;
+}
+
 #title {
   background-color: #ff4c68;
 }
