--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,46 @@
+body {
+  font-family: 'Montserrat';
+}
+
+.dog-img {
+  width: 60%;
+  transform: rotate(25deg);
+}
 #title-container {
   padding: 3% 15%;
 }
 #h1-title {
   font-family: 'Montserrat';
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
+  padding-bottom: 2.5rem;
 }
 
 #title {
   background-color: #ff4c68;
+}
+
+/* Nav bar settings */
+
+.navbar {
+  padding-bottom: 4.5rem;
+}
+.navbar-brand {
+  font-family: 'Ubuntu';
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+.nav-item {
+  padding: 0 18px;
+}
+.nav-link {
+  font-size: 1.2rem;
+  font-family: 'Montserrat';
+}
+
+/* Buttoms settings  */
+
+.download-btn {
+  margin: 5% 3% 5% 0;
 }
