changing testimonial section

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,3 +69,19 @@ body {
 .features-container {
   padding: 5%;
 }
+
+/* Testimonial Section  */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonials-h2 {
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
+}
