--- a/css/styles.css
+++ b/css/styles.css
@@ -85,3 +85,22 @@ body {
   font-size: 3rem;
   line-height: 1.5;
 }
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+/* Press section */
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  margin: 20px 20px 15px;
+  width: 15%;
+}
