changing testimonials padding from id to carousel items

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,6 @@ body {
 /* Testimonial Section  */
 
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
@@ -90,6 +89,10 @@ body {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
 }
 
 /* Press section */
