--- a/css/styles.css
+++ b/css/styles.css
@@ -111,5 +111,24 @@ body {
 /* Princing section */
 
 #pricing {
+  text-align: center;
   padding: 100px;
+  color: #8f8f8f;
+}
+
+.prices-plans {
+  color: #000;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.prices {
+  color: #000;
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+.pricing-card {
+  padding: 3% 2%;
 }
