--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ p {
   padding-top: 2.5rem;
 }
 
-.big-title {
+#title .title {
   text-align: left;
   padding-bottom: 2.5rem;
 }
@@ -100,12 +100,12 @@ p {
 
 /* Features Icons */
 
-.favi {
+#features .fas {
   color: #ef8172;
   margin: 1.5rem;
 }
 
-.favi:hover {
+#features .fas:hover {
   color: #ff4c68;
 }
 
@@ -144,13 +144,12 @@ p {
   color: #000;
 }
 
-.pricing-card {
-  padding: 3% 2%;
-}
-
-.prices {
+#pricing h2 {
   color: #000;
   font-size: 2.5rem;
+}
+.pricing-card {
+  padding: 3% 2%;
 }
 
 /* call to action section */
@@ -165,7 +164,7 @@ p {
   background-color: #fff;
 }
 
-.socmed {
+#footer i {
   color: #000;
   padding: 2%;
 }
